[package]
name = "acteur"
version = "0.1.0"
authors = ["GregP <github@swimr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam = "0.7.3"
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.4"

# websocket
native-tls = "0.2.4"
tungstenite = "0.11.1"
url = "2.1.1"
json = "0.12.4"