[package]
name = "ticker_04"
version = "0.1.0"
authors = ["GregP <github@swimr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#.env
dotenv = "0.15.0"

# messaging
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.4"

# websocket
native-tls = "0.2.4"
tungstenite = "0.11.1"
url = "2.1.1"
json = "0.12.4"

# Postgres
chrono = "0.4.15"
postgres={version = "0.17.3", features = ["with-chrono-0_4"]}

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"